--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ add_subdirectory(libjalali)
 
 add_executable(jdate jdate_src/help.c jdate_src/main.c)
 target_link_libraries(jdate libjalali)
+
+add_executable(jcal jcal_src/jcal.c)
+target_link_libraries(jcal libjalali)
